Ajuste da tabela cidade

--- a/src/app/listar-cidade/listar-cidade.component.html
+++ b/src/app/listar-cidade/listar-cidade.component.html
@@ -3,9 +3,8 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Nome</th>
-        <th scope="col">CPF</th>
         <th scope="col">Cidade</th>
+        <th scope="col">Estado</th>
         <th scope="col">Editar</th>
         <th scope="col">Excluir</th>
       </tr>
